--- a/CSS/main.css
+++ b/CSS/main.css
@@ -1,1 +1,9 @@
-/* Main Style Sheet */
+.graphdiv, .inputdiv {
+    outline: 5px solid black;
+    border-radius: 2px;
+    padding: 10px;
+    margin: 100px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
